--- a/less/modules/input-groups.less
+++ b/less/modules/input-groups.less
@@ -86,24 +86,16 @@
   .input-group-sm & .btn {
     line-height: 19px;
   }
-  // Negative margin to only have a 2px border between the two
   &:first-child > .btn {
-    margin-right: -2px;
     border-right-width: 0;
+    margin-right: -2px;
   }
   &:last-child > .btn {
-    margin-left: -4px;
     border-left-width: 0;
+    margin-left: -2px;
   }
-  & > .btn-default {
-    // Jankily prevent input button groups from wrapping
-    + .btn-default {
-      border-left: 2px solid @gray-light;
-      margin-left: -4px;
-    }
-    &:first-child + btn-default {
-      margin-left: -1px;
-    }
+  & > .btn-default + .btn-default {
+    border-left: 2px solid @gray-light;
   }
   & > .btn:first-child + .btn {
     .caret {
